metadata/force-app/main/default/objects/Annual_Revenue_Range__mdt/Annual_Revenue_Range__mdt.object-meta.xml
<CustomObject>
    <label>Annual Revenue Range</label>
    <pluralLabel>Annual Revenue Range</pluralLabel>
</CustomObject>