metadata/force-app/main/default/objects/Annual_Revenue_Range__mdt/fields/Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Range__c</fullName>
    <label>Annual Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-$1M</fullName>
                <default>true</default>
                <label>$0-$1M</label>
            </value>
            <value>
                <fullName>$1M-$10M</fullName>
            </value>
            <value>
                <fullName>$10M-$50M</fullName>
            </value>
            <value>
                <fullName>$50M-$100M</fullName>
            </value>
            <value>
                <fullName>$100M-$250M</fullName>
            </value>
            <value>
                <fullName>$250M-$500M</fullName>
            </value>
            <value>
                <fullName>$500M-$1B</fullName>
            </value>
            <value>
                <fullName>$1B-$10B</fullName>
            </value>
            <value>
                <fullName>$10B+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>