metadata/force-app/main/default/objects/Annual_Revenue_Range__mdt/fields/Min_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Min_Revenue__c</fullName>
    <label>Min Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>